# PALM-E

./: README.md  example.py  logs.txt  pyproject.toml  requirements.txt  setup.py  train.py
palm_e/: build_dataset.py  embedding.py  model.py  model_test.py  train_distributed.py
palme/: __init__.py  embedding.py  model.py  palm.py  ppo.py  reward_model.py  transformer.py
palme/core/: attend.py  transformer.py
palme/old/: v1.py
