[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "palme"
version = "0.0.6"
description = "palme - Pytorch"
authors = ["Kye Gomez <kye@apac.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/kyegomez/palme"
keywords = ["artificial intelligence", "attention mechanism", "transformers"]

[tool.poetry.dependencies]
python = "^3.6"
torch = "*"
lion-pytorch = "*"
numpy = "*"
einops = "*"
accelerate = "*"
transformers = "*"
SentencePiece = "*"
datasets = "*"
matplotlib = "*"
deepspeed = "*"

[tool.poetry.dev-dependencies]